--- a/register/css/style.css
+++ b/register/css/style.css
@@ -18,6 +18,17 @@ body {
   margin: 0;
   padding: 0;
 }
+
+input:focus, textarea:focus, select:focus {
+  outline: none!important;
+  box-shadow: none!important;
+}
+
+button:focus {
+  outline: none!important;
+  box-shadow: none!important;
+}
+
 a {
   color: inherit;
   text-decoration: none;
