--- a/css/style.css
+++ b/css/style.css
@@ -43,7 +43,7 @@ strong {
 }
 
 .btn {
-    background-color: #1098ad !important;
+    background-color: #ff7300 !important;
     border: none !important;
 }
 
