--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@ section {
 }
 
 strong {
-    color: #ffb800;
+    color: #FF8C00;
 }
 
 #section-1 .card {
@@ -43,7 +43,7 @@ strong {
 }
 
 .btn {
-    background-color: #ff7300 !important;
+    background-color: #FF8C00 !important;
     border: none !important;
 }
 
@@ -66,7 +66,7 @@ strong {
 }
 
 span {
-    color: #2ba56e;
+    color: #FF8C00;
     font-size: 13px;
 }
 
