benefit-card added

--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@ section {
     }
 }
 
-#section-1, #section-6 {
+#section-1, #section-7 {
     background-color: #02131b;
     color: #fff;
 }
@@ -33,11 +33,11 @@ strong {
     background-color: #112934;
 }
 
-#section-6 .card {
+#section-7 .card {
     background-color: #112934;
 }
 
-#section-5 .card {
+#section-6 .card {
     background-color: #112934;
     color: #fff;
 }
@@ -59,6 +59,12 @@ strong {
 .service-card {
     box-shadow: 0 0 32px 0 rgb(0 0 0 / 3%);
     border: none !important;
+}
+
+.benefit-card {
+    box-shadow: 0 0 32px 0 rgb(0 0 0 / 3%);
+    border: none !important;
+    background-color: #112934 !important;
 }
 
 .workshop-card {
