--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,13 @@
+@import url('https://fonts.googleapis.com/css?family=Poppins:300,400,500,700,900&display=swap');
+
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+}
+
+body {
+  font-family: 'Poppins', sans-serif !important;
 }
 
 section {
