--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,14 @@ body {
   font-family: 'Poppins', sans-serif !important;
 }
 
+h1,h2,h3,h4 {
+  font-weight: bold !important;
+}
+
+h4 {
+  letter-spacing: 2px !important;
+}
+
 h4.underline {
   width: 300px;
   height: 3px;
@@ -78,6 +86,10 @@ button:focus {
   box-shadow: none !important;
 }
 
+.card {
+  border: none !important;
+}
+
 .checkbox-card {
   background-color: #fafafa !important;
   border: none !important;
@@ -86,6 +98,13 @@ button:focus {
 .btn {
   background-image: linear-gradient(315deg, #ff4e00 0%, #ec9f05 74%) !important;
   border: none !important;
+  border-radius: 7px !important;
+  transition: transform .2s;
+}
+
+.btn:hover {
+  background-image: linear-gradient(315deg, #ec9f05 0%, #ff4e00 74%) !important;
+  transform: scale(1.1);
 }
 
 #section-3 {
