--- a/css/style.css
+++ b/css/style.css
@@ -102,7 +102,7 @@ button:focus {
 .btn {
   background-image: linear-gradient(315deg, #ff4e00 0%, #ec9f05 74%) !important;
   border: none !important;
-  border-radius: 7px !important;
+  border-radius: 2rem !important;
   transition: transform .2s;
 }
 
@@ -155,12 +155,9 @@ video {
   padding: 20px 40px;
   background-color: #fff;
   margin-top: 20px;
-  -webkit-box-shadow: 0px 24px 44px 0px rgba(190, 114, 99, 0.37);
-  -moz-box-shadow: 0px 24px 44px 0px rgba(190, 114, 99, 0.37);
-  box-shadow: 0px 24px 44px 0px rgba(190, 114, 99, 0.37);
 }
 .formsales1 h1 {
-  color: #5d5845;
+  color: #000;
   font-weight: 700;
   margin-bottom: 15px;
   font-size: 28px;
@@ -170,6 +167,11 @@ video {
 select {
   border: 1px #fcbc44 solid !important;
 }
+
+.formsales1 label {
+  color: #000;
+}
+
 .formsales1 .boder_lft {
   border-left: 0px !important;
   border-top-right-radius: 2rem !important;
@@ -201,4 +203,28 @@ select {
 }
 .formsales1 .form-group {
   margin-bottom: 10px;
+}
+
+@media screen and (min-width: 767px) {
+  #mbutton {
+    display: none !important;
+  }
+  #pcol {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  #pbutton {
+    display: none !important;
+  }
+  #pform {
+    display: none !important;
+  }
+  #mlogo {
+    width: 155px;
+    height: auto;
+  }
 }
