--- a/css/style.css
+++ b/css/style.css
@@ -216,12 +216,30 @@ border-radius: 0;
   background-image: linear-gradient(315deg, #ff4e00 0%, #ec9f05 74%) !important;
   border: none !important;
   border-radius: 2rem !important;
-  transition: transform .2s;
+  animation: shake 0.82s cubic-bezier(.36, .07, .19, .97) both infinite;
+  transform: translate3d(0, 0, 0);
+  backface-visibility: hidden;
+  perspective: 1000px;
 }
 
-.btn:hover {
-  background-image: linear-gradient(315deg, #ec9f05 0%, #ff4e00 74%) !important;
-  transform: scale(1.1);
+@keyframes shake {
+  10%,
+  90% {
+    transform: translate3d(-1px, 0, 0);
+  }
+  20%,
+  80% {
+    transform: translate3d(2px, 0, 0);
+  }
+  30%,
+  50%,
+  70% {
+    transform: translate3d(-4px, 0, 0);
+  }
+  40%,
+  60% {
+    transform: translate3d(4px, 0, 0);
+  }
 }
 
 #section-3 {
