owl carousel added

--- a/css/style.css
+++ b/css/style.css
@@ -349,6 +349,9 @@ select {
   .mhero {
     display: none !important;
   }
+  .mgallery {
+    display: none !important;
+  }
   #pcol {
     display: flex;
     justify-content: center;
@@ -364,6 +367,9 @@ select {
     display: none !important;
   }
   .phero {
+    display: none !important;
+  }
+  .pgallery {
     display: none !important;
   }
   #pform {
