--- a/css/style.css
+++ b/css/style.css
@@ -216,35 +216,12 @@ border-radius: 0;
   background-image: linear-gradient(105deg, #ff4e00, #ec9f05, #ff9100, #ff4e00, #e08700, #ec9f05, #ff4e00, #ec9f05, #ff0000) !important;
   border: none !important;
   border-radius: 2rem !important;
-  -webkit-animation: rainbow 2s ease infinite;
-  -z-animation: rainbow 2s ease infinite;
-  -o-animation: rainbow 2s ease infinite;
-  animation: rainbow 2s ease infinite alternate;
-  background-size: 200% 200%;
-  animation: shake 0.82s cubic-bezier(.36, .07, .19, .97) both;
-  transform: translate3d(0, 0, 0);
-  backface-visibility: hidden;
-  perspective: 1000px;
-}
-
-@keyframes shake {
-  10%,
-  90% {
-      transform: translate3d(-1px, 0, 0);
-  }
-  20%,
-  80% {
-      transform: translate3d(2px, 0, 0);
-  }
-  30%,
-  50%,
-  70% {
-      transform: translate3d(-4px, 0, 0);
-  }
-  40%,
-  60% {
-      transform: translate3d(4px, 0, 0);
-  }
+  -webkit-animation: rainbow 2s ease infinite !important;
+  -z-animation: rainbow 2s ease infinite !important;
+  -o-animation: rainbow 2s ease infinite !important;
+  animation: rainbow 2s ease infinite alternate !important;
+  background-size: 200% 200% !important;
+  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.4) !important;
 }
 
 @-webkit-keyframes rainbow {
