--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Poppins:300,400,500,700,900&display=swap');
+@import url("https://fonts.googleapis.com/css?family=Poppins:300,400,500,700,900&display=swap");
 
 * {
   padding: 0;
@@ -7,10 +7,13 @@
 }
 
 body {
-  font-family: 'Poppins', sans-serif !important;
+  font-family: "Poppins", sans-serif !important;
 }
 
-h1,h2,h3,h4 {
+h1,
+h2,
+h3,
+h4 {
   font-weight: bold !important;
 }
 
@@ -133,14 +136,13 @@ button:focus {
   border: 2px solid #eb6d08;
 }
 
-
 .checkbox-label input:checked ~ .checkbox-custom {
   background-color: #eb6d08;
   border-radius: 5px;
   -webkit-transform: rotate(0deg) scale(1);
   -ms-transform: rotate(0deg) scale(1);
   transform: rotate(0deg) scale(1);
-  opacity:1;
+  opacity: 1;
   border: 2px solid #eb6d08;
 }
 
@@ -157,7 +159,7 @@ button:focus {
   -webkit-transform: rotate(0deg) scale(0);
   -ms-transform: rotate(0deg) scale(0);
   transform: rotate(0deg) scale(0);
-  opacity:1;
+  opacity: 1;
   transition: all 0.3s ease-out;
   -webkit-transition: all 0.3s ease-out;
   -moz-transition: all 0.3s ease-out;
@@ -166,18 +168,18 @@ button:focus {
 }
 
 .checkbox-label input:checked ~ .checkbox-custom::after {
--webkit-transform: rotate(45deg) scale(1);
--ms-transform: rotate(45deg) scale(1);
-transform: rotate(45deg) scale(1);
-opacity:1;
-left: 8px;
-top: 3px;
-width: 6px;
-height: 12px;
-border: solid #fff;
-border-width: 0 2px 2px 0;
-background-color: transparent;
-border-radius: 0;
+  -webkit-transform: rotate(45deg) scale(1);
+  -ms-transform: rotate(45deg) scale(1);
+  transform: rotate(45deg) scale(1);
+  opacity: 1;
+  left: 8px;
+  top: 3px;
+  width: 6px;
+  height: 12px;
+  border: solid #fff;
+  border-width: 0 2px 2px 0;
+  background-color: transparent;
+  border-radius: 0;
 }
 
 .checkbox-label .checkbox-custom::before {
@@ -191,7 +193,7 @@ border-radius: 0;
   border: 2px solid #eb6d08;
   -webkit-transform: scale(0);
   -ms-transform: scale(0);
-  transform: scale(0);	
+  transform: scale(0);
 }
 
 .checkbox-label input:checked ~ .checkbox-custom::before {
@@ -203,7 +205,7 @@ border-radius: 0;
   -webkit-transform: scale(3);
   -ms-transform: scale(3);
   transform: scale(3);
-  opacity:0;
+  opacity: 0;
   z-index: 999;
   transition: all 0.3s ease-out;
   -webkit-transition: all 0.3s ease-out;
@@ -217,33 +219,37 @@ border-radius: 0;
   border: none !important;
   background: #ff8c00 !important;
   box-shadow: 0 0 0 0 rgb(212, 183, 90);
-  -webkit-animation: pulse 3s infinite;
+  -webkit-animation: pulse 1.75s infinite cubic-bezier(0.66, 0, 0, 1);
+  -moz-animation: pulse 1.75s infinite cubic-bezier(0.66, 0, 0, 1);
+  -ms-animation: pulse 1.75s infinite cubic-bezier(0.66, 0, 0, 1);
+  animation: pulse 1.75s infinite cubic-bezier(0.66, 0, 0, 1);
 }
 
 .pulse-button:hover {
   -webkit-animation: none;
+  -moz-animation: none;
+  -ms-animation: none;
+  animation: none;
 }
 
 @-webkit-keyframes pulse {
-  0% {
-    -moz-transform: scale(0.9);
-    -ms-transform: scale(0.9);
-    -webkit-transform: scale(0.9);
-    transform: scale(0.9);
+  to {
+    box-shadow: 0 0 0 45px rgba(232, 76, 61, 0);
   }
-  70% {
-    -moz-transform: scale(1);
-    -ms-transform: scale(1);
-    -webkit-transform: scale(1);
-    transform: scale(1);
-    box-shadow: 0 0 0 50px rgba(90, 153, 212, 0);
+}
+@-moz-keyframes pulse {
+  to {
+    box-shadow: 0 0 0 45px rgba(232, 76, 61, 0);
   }
-  100% {
-    -moz-transform: scale(0.9);
-    -ms-transform: scale(0.9);
-    -webkit-transform: scale(0.9);
-    transform: scale(0.9);
-    box-shadow: 0 0 0 0 rgba(90, 153, 212, 0);
+}
+@-ms-keyframes pulse {
+  to {
+    box-shadow: 0 0 0 45px rgba(232, 76, 61, 0);
+  }
+}
+@keyframes pulse {
+  to {
+    box-shadow: 0 0 0 45px rgba(232, 76, 61, 0);
   }
 }
 
@@ -336,7 +342,10 @@ select {
   margin-bottom: 10px;
 }
 
-#pbutton h4, #pbutton p, #mbutton h4, #mbutton p {
+#pbutton h4,
+#pbutton p,
+#mbutton h4,
+#mbutton p {
   margin-bottom: 0;
 }
 
